--- a/frontend/forum/forum.html
+++ b/frontend/forum/forum.html
@@ -69,60 +69,48 @@
             <h2>📍 Training Groups by Race</h2>
             <p>Join or create a training group for an upcoming ultramarathon you're running!</p>
 
-            <div class="training-group">
-                <h4>
-                    <a href="forum/group_forum.html?group=Western%20States%20100%20(CA)">Western States 100 (CA)</a>
-                </h4>
-                <p>Group for runners training for Western States. Weekly Zoom calls + local meetups in NorCal.</p>
-                <button class="join-btn">Join Group</button>
-            </div>
-
-            <div class="training-group">
-                <h4>
-                    <a href="forum/group_forum.html?group=UTMB%20(France)">UTMB (France)</a>
-                </h4>
-                <p>Global group for UTMB training. Share routes, advice, and gear picks.</p>
-                <button class="join-btn">Join Group</button>
+            <div id="dynamic-training-groups">
+                <p>Loading groups...</p>
             </div>
 
             <a href="forum/create_group.html" class="create-group-btn">+ Create New Training Group</a>
         </section>
-    </main>
 
-    <!-- Alan Chat Widget -->
-    <div id="alan-bubble">💬</div>
-    <div id="alan-window">
-        <div id="alan-messages"></div>
-        <form id="alan-form">
-            <input id="alan-input" type="text" placeholder="Ask Alan about races..." />
-            <button type="submit">Send</button>
-        </form>
-    </div>
 
-    <footer class="site-footer">
-        <div class="footer-links">
-            <a href="contact.html">Contact Us</a> |
-            <a href="privacy.html">Privacy Policy</a> |
-            <a href="termsofservice.html">Terms of Service</a> |
-            <a href="faq.html">FAQ</a> |
-            <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
+        <!-- Alan Chat Widget -->
+        <div id="alan-bubble">💬</div>
+        <div id="alan-window">
+            <div id="alan-messages"></div>
+            <form id="alan-form">
+                <input id="alan-input" type="text" placeholder="Ask Alan about races..." />
+                <button type="submit">Send</button>
+            </form>
         </div>
-        <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
-    </footer>
 
-    <script src="forum/forum_script.js"></script>
-    <script src="index_script.js"></script>
-    <script src="alanai_chatbot/alan.js"></script>
+        <footer class="site-footer">
+            <div class="footer-links">
+                <a href="contact.html">Contact Us</a> |
+                <a href="privacy.html">Privacy Policy</a> |
+                <a href="termsofservice.html">Terms of Service</a> |
+                <a href="faq.html">FAQ</a> |
+                <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
+            </div>
+            <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
+        </footer>
 
-    <!-- Inject dropdown if logged in -->
-    <script>
-        const token = localStorage.getItem("token");
-        const username = localStorage.getItem("username");
-        const profilePic = localStorage.getItem("profilePicture");
+        <script src="forum/forum_script.js"></script>
+        <script src="index_script.js"></script>
+        <script src="alanai_chatbot/alan.js"></script>
 
-        if (token && username) {
-            const accountTab = document.getElementById("account-tab");
-            accountTab.innerHTML = `
+        <!-- Inject dropdown if logged in -->
+        <script>
+            const token = localStorage.getItem("token");
+            const username = localStorage.getItem("username");
+            const profilePic = localStorage.getItem("profilePicture");
+
+            if (token && username) {
+                const accountTab = document.getElementById("account-tab");
+                accountTab.innerHTML = `
         <div class="dropdown">
           <a href="account.html" class="dropdown-toggle">
             <img src="${profilePic || '/images/default-profile.png'}" class="nav-profile-img" alt="Profile" />
@@ -134,8 +122,8 @@
           </ul>
         </div>
       `;
-        }
-    </script>
+            }
+        </script>
 </body>
 
 </html>
