--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="race_directory.html">Race Directory</a></li>
                     <li><a href="forum.html">Runner Community</a></li>
-                    <li id="account-tab" class="auth-tab"><a href="login.html">Login</a></li>
+                    <li id="account-tab" class="auth-tab"></li>
                 </ul>
             </nav>
         </div>
