--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,26 +13,23 @@
 </head>
 
 <body class="forum-page">
-    <header class="sticky-header">
-        <div class="header-inner">
+    <header class="sticky-header dual-row-header">
+        <div class="header-top-row">
             <div class="header-left">
                 <img src="ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
                 <span class="site-title">UltramarathonConnect</span>
             </div>
+            <div id="account-tab" class="auth-tab"></div>
+        </div>
 
+        <div class="header-bottom-row">
             <button class="menu-toggle">☰</button>
-
             <nav class="header-right">
                 <ul class="menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="race_directory.html">Race Directory</a></li>
                     <li><a href="forum.html">Runner Community</a></li>
                 </ul>
-
-                <!-- ✅ Separate account dropdown -->
-                <div id="account-wrapper">
-                    <div id="account-tab" class="auth-tab"></div>
-                </div>
             </nav>
         </div>
     </header>
