--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,15 +15,17 @@
 <body class="forum-page">
     <header class="sticky-header dual-row-header">
         <div class="header-top-row">
-            <div class="header-left">
+            <div id="account-tab" class="auth-tab"></div>
+
+            <div class="header-center">
                 <img src="ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
                 <span class="site-title">UltramarathonConnect</span>
             </div>
-            <div id="account-tab" class="auth-tab"></div>
+
+            <button class="menu-toggle">☰</button>
         </div>
 
         <div class="header-bottom-row">
-            <button class="menu-toggle">☰</button>
             <nav class="header-right">
                 <ul class="menu">
                     <li><a href="index.html">Home</a></li>
