--- a/frontend/account.html
+++ b/frontend/account.html
@@ -9,160 +9,164 @@
     <link rel="stylesheet" href="alanai_chatbot/chat-widget.css">
 </head>
 
-<body>
-    <header class="sticky-header">
-        <div class="header-inner">
+<body class="forum-page">
+<header class="sticky-header dual-row-header">
+    <div class="header-top-row">
+        <div class="mobile-header-container">
             <div class="header-left">
                 <img src="ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
                 <span class="site-title">UltramarathonConnect</span>
             </div>
             <button class="menu-toggle">☰</button>
-            <nav class="header-right">
-                <ul class="menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="race_directory.html">Race Directory</a></li>
-                    <li><a href="forum.html">Runner Community</a></li>
-                    <li id="account-tab" class="auth-tab"><a href="login.html">Login</a></li>
-                </ul>
-            </nav>
         </div>
-    </header>
-
-    <main>
-        <section class="account-container">
-            <div class="account-card">
-                <div class="profile-container">
-                    <img id="profile-pic" src="images/default-profile.png" alt="User Profile Picture"
-                        class="profile-pic">
-                    <label for="upload-input" class="upload-btn">Upload Profile Photo</label>
-                    <input type="file" id="upload-input" accept="image/*" style="display: none;">
-                    <p id="upload-message" class="success-message"></p>
-                </div>
-                <div class="info-section">
-                    <h3 id="username">Welcome, User!</h3>
-                    <p id="email"><strong>Email:</strong> user@example.com</p>
-                </div>
-            </div>
-            <div class="account-actions">
-                <button class="orange-btn" onclick="window.location.href='profile_edit.html'">Edit Profile</button>
-                <button class="orange-btn" id="logout-button">Log Out</button>
-            </div>
-        </section>
-    </main>
-
-    <!-- Alan Chat Widget -->
-    <div id="alan-bubble">💬</div>
-    <div id="alan-window">
-        <div id="alan-messages"></div>
-        <form id="alan-form">
-            <input id="alan-input" type="text" placeholder="Ask Alan about races..." />
-            <button type="submit">Send</button>
-        </form>
+        <div id="account-tab" class="auth-tab mobile-account-tab"></div>
     </div>
 
-    <footer class="site-footer">
-        <div class="footer-links">
-            <a href="contact.html">Contact Us</a> |
-            <a href="privacy.html">Privacy Policy</a> |
-            <a href="termsofservice.html">Terms of Service</a> |
-            <a href="faq.html">FAQ</a> |
-            <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
+    <div class="header-bottom-row">
+        <nav class="header-right">
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="race_directory.html">Race Directory</a></li>
+                <li><a href="forum.html">Runner Community</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
+<main>
+    <section class="account-container">
+        <div class="account-card">
+            <div class="profile-container">
+                <img id="profile-pic" src="images/default-profile.png" alt="User Profile Picture" class="profile-pic">
+                <label for="upload-input" class="upload-btn">Upload Profile Photo</label>
+                <input type="file" id="upload-input" accept="image/*" style="display: none;">
+                <p id="upload-message" class="success-message"></p>
+            </div>
+            <div class="info-section">
+                <h3 id="username">Welcome, User!</h3>
+                <p id="email"><strong>Email:</strong> user@example.com</p>
+            </div>
         </div>
-        <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
-    </footer>
+        <div class="account-actions">
+            <button class="orange-btn" onclick="window.location.href='profile_edit.html'">Edit Profile</button>
+            <button class="orange-btn" id="logout-button">Log Out</button>
+        </div>
+    </section>
+</main>
 
-    <script>
-        async function fetchAccountInfo() {
-            const token = localStorage.getItem('token')?.trim();
-            if (!token) {
-                alert("You are not logged in. Redirecting to login...");
-                window.location.href = 'login.html';
-                return;
-            }
+<!-- Alan Chat Widget -->
+<div id="alan-bubble">💬</div>
+<div id="alan-window">
+    <div id="alan-messages"></div>
+    <form id="alan-form">
+        <input id="alan-input" type="text" placeholder="Ask Alan about races..." />
+        <button type="submit">Send</button>
+    </form>
+</div>
 
-            try {
-                const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/account', {
-                    method: 'GET',
-                    headers: {
-                        Authorization: `Bearer ${token}`,
-                        'Content-Type': 'application/json',
-                    },
-                });
+<footer class="site-footer">
+    <div class="footer-links">
+        <a href="contact.html">Contact Us</a> |
+        <a href="privacy.html">Privacy Policy</a> |
+        <a href="termsofservice.html">Terms of Service</a> |
+        <a href="faq.html">FAQ</a> |
+        <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
+    </div>
+    <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
+</footer>
 
-                if (response.ok) {
-                    const { user } = await response.json();
-                    document.getElementById('username').textContent = `Welcome, ${user.username}!`;
-                    document.getElementById('email').innerHTML = `<strong>Email:</strong> ${user.email}`;
-                    if (user.profilePicture) {
-                        document.getElementById('profile-pic').src = user.profilePicture;
-                        localStorage.setItem('profilePicture', user.profilePicture);
-                    }
-                } else {
-                    console.error("Error fetching account info:", await response.text());
-                    alert("Session expired. Redirecting to login...");
-                    localStorage.removeItem('token');
-                    window.location.href = 'login.html';
-                }
-            } catch (error) {
-                console.error("Error fetching account info:", error);
-                alert("An unexpected error occurred.");
-            }
+<script>
+    async function fetchAccountInfo() {
+        const token = localStorage.getItem('token')?.trim();
+        if (!token) {
+            alert("You are not logged in. Redirecting to login...");
+            window.location.href = 'login.html';
+            return;
         }
 
-        document.getElementById('upload-input').addEventListener('change', async (e) => {
-            const file = e.target.files[0];
-            if (!file) return;
+        try {
+            const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/account', {
+                method: 'GET',
+                headers: {
+                    Authorization: `Bearer ${token}`,
+                    'Content-Type': 'application/json',
+                },
+            });
 
-            const formData = new FormData();
-            formData.append('profilePicture', file);
-
-            const token = localStorage.getItem('token')?.trim();
-            if (!token) {
-                alert("Session expired. Redirecting to login...");
-                window.location.href = 'login.html';
-                return;
-            }
-
-            try {
-                const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/upload-profile-picture', {
-                    method: 'POST',
-                    headers: { Authorization: `Bearer ${token}` },
-                    body: formData,
-                });
-
-                if (response.ok) {
-                    const { profilePicture } = await response.json();
-                    document.getElementById('profile-pic').src = profilePicture;
-                    localStorage.setItem('profilePicture', profilePicture);
-                    document.getElementById('upload-message').textContent = "Profile picture updated successfully!";
-                } else {
-                    console.error("Error uploading profile picture:", await response.text());
-                    document.getElementById('upload-message').textContent = "Failed to upload profile picture.";
+            if (response.ok) {
+                const { user } = await response.json();
+                document.getElementById('username').textContent = `Welcome, ${user.username}!`;
+                document.getElementById('email').innerHTML = `<strong>Email:</strong> ${user.email}`;
+                if (user.profilePicture) {
+                    document.getElementById('profile-pic').src = user.profilePicture;
+                    localStorage.setItem('profilePicture', user.profilePicture);
                 }
-            } catch (error) {
-                console.error("Error uploading profile picture:", error);
-                document.getElementById('upload-message').textContent = "An unexpected error occurred.";
+            } else {
+                console.error("Error fetching account info:", await response.text());
+                alert("Session expired. Redirecting to login...");
+                localStorage.removeItem('token');
+                window.location.href = 'login.html';
             }
-        });
+        } catch (error) {
+            console.error("Error fetching account info:", error);
+            alert("An unexpected error occurred.");
+        }
+    }
 
-        document.getElementById('logout-button').addEventListener('click', () => {
-            localStorage.removeItem('token');
-            localStorage.removeItem('profilePicture');
-            alert("You have successfully logged out.");
+    document.getElementById('upload-input').addEventListener('change', async (e) => {
+        const file = e.target.files[0];
+        if (!file) return;
+
+        const formData = new FormData();
+        formData.append('profilePicture', file);
+
+        const token = localStorage.getItem('token')?.trim();
+        if (!token) {
+            alert("Session expired. Redirecting to login...");
             window.location.href = 'login.html';
-        });
+            return;
+        }
 
-        document.addEventListener('DOMContentLoaded', () => {
-            const storedProfilePicture = localStorage.getItem('profilePicture');
-            if (storedProfilePicture) {
-                document.getElementById('profile-pic').src = storedProfilePicture;
+        try {
+            const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/upload-profile-picture', {
+                method: 'POST',
+                headers: { Authorization: `Bearer ${token}` },
+                body: formData,
+            });
+
+            if (response.ok) {
+                const { profilePicture } = await response.json();
+                document.getElementById('profile-pic').src = profilePicture;
+                localStorage.setItem('profilePicture', profilePicture);
+                document.getElementById('upload-message').textContent = "Profile picture updated successfully!";
+            } else {
+                console.error("Error uploading profile picture:", await response.text());
+                document.getElementById('upload-message').textContent = "Failed to upload profile picture.";
             }
-            fetchAccountInfo();
-        });
-    </script>
+        } catch (error) {
+            console.error("Error uploading profile picture:", error);
+            document.getElementById('upload-message').textContent = "An unexpected error occurred.";
+        }
+    });
 
-    <script src="index_script.js"></script>
-    <script src="alanai_chatbot/alan.js"></script>
+    document.getElementById('logout-button').addEventListener('click', () => {
+        localStorage.removeItem('token');
+        localStorage.removeItem('profilePicture');
+        alert("You have successfully logged out.");
+        window.location.href = 'login.html';
+    });
+
+    document.addEventListener('DOMContentLoaded', () => {
+        const storedProfilePicture = localStorage.getItem('profilePicture');
+        if (storedProfilePicture) {
+            document.getElementById('profile-pic').src = storedProfilePicture;
+        }
+        fetchAccountInfo();
+    });
+</script>
+
+<script src="index_script.js"></script>
+<script src="alanai_chatbot/alan.js"></script>
 </body>
 
 </html>
