--- a/frontend/forum/comments.html
+++ b/frontend/forum/comments.html
@@ -10,94 +10,88 @@
 </head>
 
 <body class="forum-page">
-    <header class="sticky-header">
-        <div class="header-inner">
+<header class="sticky-header dual-row-header">
+    <div class="header-top-row">
+        <div class="mobile-header-container">
             <div class="header-left">
-                <img src="/ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
+                <img src="ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
                 <span class="site-title">UltramarathonConnect</span>
             </div>
             <button class="menu-toggle">☰</button>
-            <nav class="header-right">
-                <ul class="menu">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/race_directory.html">Race Directory</a></li>
-                    <li><a href="/forum.html">Runner Community</a></li>
-                    <li id="account-tab" class="auth-tab"><a href="/login.html">Login</a></li>
-                    <li class="dropdown auth-dropdown" style="display: none;">
-                        <a href="/account.html">
-                            <img id="nav-profile-pic" src="/images/default-profile.png" alt="Profile"
-                                class="nav-profile-img" />
-                            <span id="nav-username">My Account</span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/account.html">View Profile</a></li>
-                            <li><a href="/logout.html">Sign Out</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
         </div>
-    </header>
-
-    <main class="forum-wrapper">
-        <h1 class="comments-heading">Post & Replies</h1>
-        <section id="post-details"></section>
-
-        <div style="text-align: center; margin-bottom: 1rem;">
-            <button id="show-reply-form-btn" class="join-btn">💬 Reply to Post</button>
-        </div>
-
-        <section id="comments-container">
-            <form id="comment-form" style="display: none;">
-                <textarea id="comment-content" placeholder="Write your reply..." required></textarea>
-                <button type="submit">Reply</button>
-                <p id="comment-error" class="error-message"></p>
-            </form>
-            <div id="comment-list"></div>
-        </section>
-    </main>
-
-    <!-- Alan Chat Widget -->
-    <div id="alan-bubble">💬</div>
-    <div id="alan-window">
-        <div id="alan-messages"></div>
-        <form id="alan-form">
-            <input id="alan-input" type="text" placeholder="Ask Alan about races..." />
-            <button type="submit">Send</button>
-        </form>
+        <div id="account-tab" class="auth-tab mobile-account-tab"></div>
     </div>
 
-    <footer class="site-footer">
-        <div class="footer-links">
-            <a href="/contact.html">Contact Us</a> |
-            <a href="/privacy.html">Privacy Policy</a> |
-            <a href="/termsofservice.html">Terms of Service</a> |
-            <a href="/faq.html">FAQ</a> |
-            <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
-        </div>
-        <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
-    </footer>
+    <div class="header-bottom-row">
+        <nav class="header-right">
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="race_directory.html">Race Directory</a></li>
+                <li><a href="forum.html">Runner Community</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
-    <script src="/comments_script.js"></script>
-    <script src="/index_script.js"></script>
-    <script src="/alanai_chatbot/alan.js"></script>
+<main class="forum-wrapper">
+    <h1 class="comments-heading">Post & Replies</h1>
+    <section id="post-details"></section>
 
-    <!-- Inject dropdown if logged in -->
-    <script>
-        const token = localStorage.getItem("token");
-        const username = localStorage.getItem("username");
-        const profilePic = localStorage.getItem("profilePicture");
+    <div style="text-align: center; margin-bottom: 1rem;">
+        <button id="show-reply-form-btn" class="join-btn">💬 Reply to Post</button>
+    </div>
 
-        if (token && username) {
-            document.querySelector(".auth-tab").style.display = "none";
-            const dropdown = document.querySelector(".auth-dropdown");
-            if (dropdown) {
-                dropdown.style.display = "block";
-                document.getElementById("nav-username").textContent = username;
-                document.getElementById("nav-profile-pic").src = profilePic || "/images/default-profile.png";
-            }
+    <section id="comments-container">
+        <form id="comment-form" style="display: none;">
+            <textarea id="comment-content" placeholder="Write your reply..." required></textarea>
+            <button type="submit">Reply</button>
+            <p id="comment-error" class="error-message"></p>
+        </form>
+        <div id="comment-list"></div>
+    </section>
+</main>
+
+<!-- Alan Chat Widget -->
+<div id="alan-bubble">💬</div>
+<div id="alan-window">
+    <div id="alan-messages"></div>
+    <form id="alan-form">
+        <input id="alan-input" type="text" placeholder="Ask Alan about races..." />
+        <button type="submit">Send</button>
+    </form>
+</div>
+
+<footer class="site-footer">
+    <div class="footer-links">
+        <a href="/contact.html">Contact Us</a> |
+        <a href="/privacy.html">Privacy Policy</a> |
+        <a href="/termsofservice.html">Terms of Service</a> |
+        <a href="/faq.html">FAQ</a> |
+        <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
+    </div>
+    <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
+</footer>
+
+<script src="/comments_script.js"></script>
+<script src="/index_script.js"></script>
+<script src="/alanai_chatbot/alan.js"></script>
+
+<!-- Inject dropdown if logged in -->
+<script>
+    const token = localStorage.getItem("token");
+    const username = localStorage.getItem("username");
+    const profilePic = localStorage.getItem("profilePicture");
+
+    if (token && username) {
+        document.querySelector(".auth-tab").style.display = "none";
+        const dropdown = document.querySelector(".auth-dropdown");
+        if (dropdown) {
+            dropdown.style.display = "block";
+            document.getElementById("nav-username").textContent = username;
+            document.getElementById("nav-profile-pic").src = profilePic || "/images/default-profile.png";
         }
-    </script>
+    }
+</script>
 </body>
 
 </html>
