--- a/frontend/forum/forum.html
+++ b/frontend/forum/forum.html
@@ -25,9 +25,9 @@
         <div class="header-bottom-row">
             <nav class="header-right">
                 <ul class="menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="race_directory.html">Race Directory</a></li>
-                    <li><a href="forum.html">Runner Community</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/race_directory.html">Race Directory</a></li>
+                    <li><a href="/forum.html">Runner Community</a></li>
                 </ul>
             </nav>
         </div>
@@ -106,6 +106,7 @@
         <script src="forum/forum_script.js"></script>
         <script src="index_script.js"></script>
         <script src="alanai_chatbot/alan.js"></script>
+        <script src="inject_account_dropdown.js"></script>
 
         <!-- Inject dropdown if logged in -->
         <script>
