--- a/frontend/login.html
+++ b/frontend/login.html
@@ -28,6 +28,14 @@
             cursor: pointer;
             user-select: none;
         }
+
+        .form-group input[type="text"],
+        .form-group input[type="email"],
+        .form-group input[type="password"] {
+            width: 100%;
+            max-width: 100%;
+            box-sizing: border-box;
+        }
     </style>
 </head>
 
@@ -69,7 +77,8 @@
                     <div class="password-wrapper">
                         <input type="password" id="password" name="password" placeholder="Enter your password"
                             required />
-                        <span class="material-icons toggle-password" title="Show password">visibility</span>
+                        <span class="material-icons toggle-password" aria-label="Show password"
+                            tabindex="0">visibility</span>
                     </div>
                 </div>
 
@@ -77,13 +86,14 @@
           display: none;
           background-color: #f57c00;
           color: white;
-          padding: 10px 12px;
+          padding: 12px 14px;
           font-size: 0.93rem;
           border-radius: 6px;
-          margin-top: 10px;">
-                </div>
+          margin-top: 12px;
+          margin-bottom: 6px;
+        "></div>
 
-                <button type="submit" class="orange-btn" style="margin-top: 15px;">Login</button>
+                <button type="submit" class="orange-btn" style="margin-top: 10px;">Login</button>
             </form>
 
             <p><a href="forgot-password.html" class="forgot-password">Forgot Password?</a></p>
@@ -181,7 +191,8 @@
                 const isVisible = input.type === 'text';
                 input.type = isVisible ? 'password' : 'text';
                 icon.textContent = isVisible ? 'visibility' : 'visibility_off';
-                icon.title = isVisible ? 'Show password' : 'Hide password';
+                icon.setAttribute('aria-label', isVisible ? 'Show password' : 'Hide password');
+                icon.removeAttribute('title');
             });
         });
     </script>
