--- a/frontend/login.html
+++ b/frontend/login.html
@@ -77,7 +77,7 @@
                     <div class="password-wrapper">
                         <input type="password" id="password" name="password" placeholder="Enter your password"
                             required />
-                        <span class="material-icons toggle-password" aria-label="Show password"
+                        <span class="material-icons toggle-password" title="Show password" aria-label="Show password"
                             tabindex="0">visibility</span>
                     </div>
                 </div>
@@ -191,8 +191,10 @@
                 const isVisible = input.type === 'text';
                 input.type = isVisible ? 'password' : 'text';
                 icon.textContent = isVisible ? 'visibility' : 'visibility_off';
-                icon.setAttribute('aria-label', isVisible ? 'Show password' : 'Hide password');
-                icon.removeAttribute('title');
+
+                const label = isVisible ? 'Show password' : 'Hide password';
+                icon.title = label;
+                icon.setAttribute('aria-label', label);
             });
         });
     </script>
